# Multimodal-Triage-and-Intake-System

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
static/: index.html
